[package]
name = "node"
version = "3.0.0-dev"
authors.workspace = true
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "node"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

# The same node binary as the `substrate` (defined in the workspace `Cargo.toml`) binary,
# but just exposed by this crate here.
[[bin]]
name = "node"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
array-bytes = "6.1"
clap = { version = "4.5.3", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.6.1" }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { version = "0.22", features = ["server"] }
futures = "0.3.21"
log = { workspace = true, default-features = true }
rand = "0.8"

# primitives
sp-authority-discovery = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-consensus-aura = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-consensus-babe = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
# beefy-primitives = { package = "sp-consensus-beefy-etf", path = "../../pallets/primitives/consensus/beefy-etf", features = ["bls-experimental"]}
beefy-primitives = { package = "sp-consensus-beefy-etf", git = "https://github.com/driemworks/pallets.git", features = ["bls-experimental"] }

grandpa-primitives = { package = "sp-consensus-grandpa", git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-application-crypto = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-timestamp = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-inherents = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-keyring = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-keystore = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-transaction-storage-proof = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-mixnet = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-mmr-primitives = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-statement-store = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-crypto-ec-utils = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, features = ["bls12-381"]}

# client dependencies
polkadot-sdk = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, features = ["node"] }
sc-client-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-chain-spec = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-transaction-pool = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-transaction-pool-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-statement-store = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-network = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-network-common = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-network-sync = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-network-statement = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-consensus-slots = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-consensus-aura = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-consensus-babe = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
# sc-consensus-babe = { path = "../client/consensus/babe" }
# beefy = { package = "sc-consensus-beefy-etf-etf", git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, features = ["bls-experimental"] }
# beefy = { package = "sc-consensus-beefy-etf", path = "../../pallets/client/consensus/beefy-etf", features = ["bls-experimental"] }
beefy = { package = "sc-consensus-beefy-etf", git = "https://github.com/driemworks/pallets.git", default-features = false, features = ["bls-experimental"] }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
mmr-gadget = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-basic-authorship = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-service = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-telemetry = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-executor = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-authority-discovery = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-mixnet = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-sync-state-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-sysinfo = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-storage-monitor = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-offchain = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }

# frame dependencies
frame-benchmarking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
frame-system = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
frame-system-rpc-runtime-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-assets = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-asset-conversion-tx-payment = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-asset-tx-payment = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-im-online = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-skip-feeless-payment = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }

frame-metadata-hash-extension = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }

# node-specific dependencies
node-template-runtime = { path = "../runtime" }
node-rpc = { path = "./rpc" }
node-primitives = { path = "./primitives" } 	
sp-ark-bls12-381 = { git = "https://github.com/paritytech/sp-curves.git" }
# etf dependencies
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk.git", branch = "dev" }
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.0"
ark-bls12-381 = { version = "0.4.0", features = ["curve"] }
w3f-bls = "0.1.3"

# CLI-specific dependencies
sc-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
frame-benchmarking-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
node-inspect = { package = "staging-node-inspect", git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
# try-runtime-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
serde_json = { workspace = true, default-features = true }

[dev-dependencies]
sc-keystore = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-client-db = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-consensus-babe = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-consensus-epochs = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-service-test = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-block-builder = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-tracing = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-blockchain = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-crypto-hashing = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
futures = "0.3.21"
tempfile = "3.1.0"
assert_cmd = "2.0.2"
nix = { version = "0.26.1", features = ["signal"] }
regex = "1.6.0"
platforms = "3.0"
soketto = "0.7.1"
criterion = { version = "0.4.0", features = ["async_tokio"] }
tokio = { version = "1.22.0", features = ["macros", "parking_lot", "time"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
wait-timeout = "0.2"
substrate-rpc-client = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-timestamp = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
substrate-cli-test-utils = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }

wat = "1.0"
frame-support = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
# frame-metadata-hash-extension = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
node-testing = { path = "./testing" }
pallet-balances = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-contracts = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-glutton = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-sudo = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-treasury = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }

pallet-transaction-payment = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-application-crypto = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
pallet-root-testing = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-consensus-babe = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-externalities = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-keyring = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
serde_json = { workspace = true, default-features = true }
scale-info = { version = "2.10.0", features = ["derive", "serde"] }
sp-trie = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sp-state-machine = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }

[build-dependencies]
clap = { version = "4.5.3", optional = true }
clap_complete = { version = "4.0.2", optional = true }
node-inspect = { package = "staging-node-inspect", git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
frame-benchmarking-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
substrate-build-script-utils = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
# substrate-frame-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
# try-runtime-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
sc-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true, optional = true }
pallet-balances = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }
sc-storage-monitor = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = true }

[features]
default = ["cli"]
cli = [
	"clap",
	"clap_complete",
	"frame-benchmarking-cli",
	"node-inspect",
	"sc-cli",
	"sc-service/rocksdb",
	"substrate-build-script-utils",
	# "substrate-frame-cli",
	# "try-runtime-cli",
]
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"node-template-runtime/runtime-benchmarks",
	"node-inspect?/runtime-benchmarks",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-glutton/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-skip-feeless-payment/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"sc-client-db/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"node-template-runtime/try-runtime",
	"pallet-asset-conversion-tx-payment/try-runtime",
	"pallet-asset-tx-payment/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-glutton/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-root-testing/try-runtime",
	"pallet-skip-feeless-payment/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"sp-runtime/try-runtime",
	# "substrate-cli-test-utils/try-runtime",
	# "try-runtime-cli/try-runtime",
]

[[bench]]
name = "transaction_pool"
harness = false

[[bench]]
name = "block_production"
harness = false

[[bench]]
name = "executor"
harness = false
