[package]
name = "sc-consensus-etf-aura"
version = "0.10.0-dev"
authors = [
    "Ideal Labs <driemworks@idealabs.network>", 
    "Parity Technologies <admin@parity.io>"
]
description = "ETF Aura consensus algorithm for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.2.2" }
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0"
ark-ec = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
rand_chacha = { version = "0.3.1", default-features = false }
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", default-features = false }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", version = "0.10.0-dev" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", version = "4.0.0-dev" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", version = "0.10.0-dev" }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", version = "0.10.0-dev" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", version = "4.0.0-dev" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", version = "4.0.0-dev" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", version = "23.0.0" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-etf-aura = { version = "0.10.0-dev", path = "../../primitives/aura" }
sp-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/polkadot-sdk" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk" }
sp-keystore = { version = "0.27.0", git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk" }

[dev-dependencies]
array-bytes = "6.1"
hex = "0.4.3"
parking_lot = "0.12.1"
tempfile = "3.1.0"
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/polkadot-sdk" }
sc-network-test = { version = "0.8.0", git = "https://github.com/paritytech/polkadot-sdk" }
sp-keyring = { version = "24.0.0", git = "https://github.com/paritytech/polkadot-sdk" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk" }
sp-tracing = { version = "10.0.0", git = "https://github.com/paritytech/polkadot-sdk" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/polkadot-sdk" }
tokio = { version = "1.22.0" }
